# tmk_desktop

./: .clang-format  .gitmodules  CMakeLIsts.txt  README.md  config.h
include/tmk_desktop/: action.hpp  action_map.hpp  bitset.hpp  event.hpp  key.hpp  keyboard.hpp  keycode.hpp  macro.hpp  sink.hpp  source.hpp  stable.h
include/tmk_desktop/engine/: host_driver.hpp  keyboard.hpp  mapping.hpp
include/tmk_desktop/win32/: event.hpp  settings.hpp
keyboards/example/: config.h  jp109.hpp  keymap.cpp  utility.hpp
keyboards/example_null/: CMakeLists.txt  config.h  keymap.cpp
libs/: CMakeLists.txt
libs/tmk/: CMakeLists.txt
platform/: CMakeLists.txt
platform/win32/: CMakeLists.txt  hook.cpp  hook.hpp  host_driver.cpp  host_driver.hpp  injected.hpp  key.cpp  key.hpp  logging.hpp  main.cpp  main.rc  resource.h  scancode.cpp  scancode.hpp  settings.hpp  sink.cpp  sink.hpp  source.cpp  source.hpp  utility.hpp
platform/win32/settings/: CMakeLists.txt  settings_example.cpp  settings_null.cpp
src/: CMakeLists.txt  keyboard.cpp  sink.cpp  source.cpp  timer.cpp  wait.cpp
src/engine/: CMakeLists.txt  host_driver.cpp  keyboard.cpp  mapping.cpp  misc.cpp
src/win32/: CMakeLists.txt  injected.hpp  receiver.hpp  scancode.cpp  sender.hpp
tools/key_test/: CMakeLists.txt  main.cpp
